# jupyterV8Kernel

./: Dockerfile  README.md  example.ipynb  kernel.json  pyproject.toml
examples/: example.ipynb
jupyterV8Kernel/: __main__.py  javascript_kernel.py
